<resources>
    <string name="app_name">BG Collection Centre App</string>
    <string name="main_screen">Main Page</string>
    <string name="default_scan">Scan</string>
    <string name="scan_details">Enter HSF Details</string>
    <string name="confirm_scan">Confirm HSF Details</string>
    <string name="fill_details">Fill HSF Details</string>
    <string name="confirm_fill">Confirm HSF Details</string>
    <string name="summary_page">Summary</string>
    <string name="select_crop_summ">Select Crop</string>
    <string name="show_crop_summ">Crop Summary</string>
    <string name="select_date_summ">Select Date</string>
    <string name="show_date_summ">Date Summary</string>
    <string name="show_inventory">Inventory for Selected Date</string>
    <string name="seedtype_prompt">Select Seed Type</string>
    <string name="edit_records">Edit Selected Record</string>
    <string name="total_summ">Total Summary</string>
    <string name="hsfid">HSF ID</string>
    <string name="fieldID">Field ID</string>
    <string name="bagsMarketed">Bags Marketed</string>
    <string name="seedtype">Seed Type</string>
    <string name="transportRate">Rate Transporter</string>
    <string name="dateProcessed">Date Processed</string>
    <string name="moldCount">Mold Count</string>
    <string name="percentClean">Percent Clean</string>
    <string name="percentMoist">Percent Moisture</string>
    <string name="kgMarketed">KG Marketed</string>
    <string name="transporter">Transporter ID</string>
    <string name="buttonNext">Next Page</string>
    <string name="buttonSave">Save</string>
    <string name="showCropSummary">Show Summary for Selected Crop</string>
    <string name="totalBagsMarketed">Total Bags Marketed</string>
    <string name="totalTrans">Total Transactions</string>
    <string name="selectDateSummary">Select Date to filter by:</string>
    <string name="showDateSummary">Show Summary for Selected Date</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string-array name="seedtype_array">
        <item>Select One</item>
        <item>SM-15-C</item>
        <item>SM-15-F</item>
        <item>SM-15-B</item>
        <item>PVA8-C</item>
        <item>PVA8-F</item>
        <item>PVA8-B</item>
        <item>Rice-C</item>
        <item>Rice-F</item>
        <item>Rice-B</item>
    </string-array>
</resources>
