<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.babbangona.barcodescannerproject.EditRecordActivity">

    <RelativeLayout
        android:id="@+id/activity_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/edHSF"
            android:layout_height="wrap_content"
            android:hint="@string/hsfid"
            style="@style/AppTextField"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/edHSFText"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edFieldID"
            android:hint="@string/fieldID"
            android:layout_below="@id/edHSF"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/edFieldIDText"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edBags"
            android:hint="@string/bagsMarketed"
            android:layout_below="@id/edFieldID"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/edBagsText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edKG"
            android:hint="@string/kgMarketed"
            android:layout_below="@id/edBags"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/edKGText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edSeed"
            android:hint="@string/seedtype"
            android:layout_below="@id/edKG"
            style="@style/ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/edSeedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editDate"
            android:hint="@string/dateProcessed"
            android:layout_below="@id/edSeed"
            style="@style/AppTextField"
            android:editable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:id="@+id/editDateText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editMold"
            android:hint="@string/moldCount"
            android:layout_below="@id/editDate"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/editMoldText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editClean"
            android:hint="@string/percentClean"
            android:layout_below="@id/editMold"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/editCleanText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editMoisture"
            android:hint="@string/percentMoist"
            android:layout_below="@id/editClean"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/editMoistureText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTransport"
            android:hint="@string/transporter"
            android:layout_below="@id/editMoisture"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/editTransportText"
                android:maxLines="1"/>





        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:text="@string/buttonSave"
            android:textAllCaps="false"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTransport"
            android:layout_centerHorizontal="true"
            android:id="@+id/ConfirmFill"
            android:onClick="saveEditedRecord"/>

    </RelativeLayout>

</ScrollView>