<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.babbangona.barcodescannerproject.ThirdScanActivity">

    <RelativeLayout
        android:id="@+id/activity_confirm_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/confirmScanHSF"
            android:layout_height="wrap_content"
            android:hint="@string/hsfid"
            style="@style/AppTextField"
            app:boxBackgroundColor="#DCDCDC"
            android:editable = "false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/confirmHsfidText"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmScanFieldID"
            android:hint="@string/fieldID"
            android:layout_below="@id/confirmScanHSF"
            app:boxBackgroundColor="#DCDCDC"
            android:editable = "false"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/confirmFieldIDText"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmScanBagsMarketed"
            android:hint="@string/bagsMarketed"
            android:layout_below="@id/confirmScanFieldID"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/confirmBagsMarketedText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmScanKgMarketed"
            android:hint="@string/kgMarketed"
            android:layout_below="@id/confirmScanBagsMarketed"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/scanKgMarketedText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmScanSeed"
            android:hint="@string/seedtype"
            android:layout_below="@id/confirmScanKgMarketed"
            style="@style/ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/confirmSeedTypeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmScanDate"
            android:hint="@string/dateProcessed"
            android:layout_below="@id/confirmScanSeed"
            style="@style/AppTextField"
            android:editable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/confirmDateText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmScanMoldCount"
            android:hint="@string/moldCount"
            android:layout_below="@id/confirmScanDate"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/confirmScanMoldCountText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmScanPercentClean"
            android:hint="@string/percentClean"
            android:layout_below="@id/confirmScanMoldCount"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/confirmScanCleanText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmScanPercentMoisture"
            android:hint="@string/percentMoist"
            android:layout_below="@id/confirmScanPercentClean"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/confirmScanMoistureText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmScanTransporterID"
            android:hint="@string/transporter"
            android:layout_below="@id/confirmScanPercentMoisture"
            style="@style/AppTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/confirmScanTransporterText"
                android:maxLines="1"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmScanTransporterRate"
            android:hint="@string/transportRate"
            android:layout_below="@id/confirmScanTransporterID"
            style="@style/ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/confirmScanTransporterRateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:text="@string/buttonSave"
            android:textAllCaps="false"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmScanTransporterRate"
            android:layout_centerHorizontal="true"
            android:id="@+id/saveScanResults"
            android:onClick="saveScanResults"/>

    </RelativeLayout>

</ScrollView>